--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/next-auth": "^3.15.0",
     "next": "10.2.2",
+    "next-auth": "^3.23.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
