--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/next-auth": "^3.15.0",
+    "faunadb": "^4.3.0",
     "next": "10.2.2",
     "next-auth": "^3.23.3",
     "react": "17.0.2",
